on my way to give every engpoint a html page

--- a/templates/todo_index.html
+++ b/templates/todo_index.html
@@ -2,9 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My to do List</title>
 </head>
+<p><h1>----TO DO LIST----</h1>
+<p><h4>Hi, I am your personal assistant J, nice to see you!</h4>
 <body>
+<p>here is your task list:</p>
+    <ul>
+        {% for task in task_list %}
+        <li>
+            <p>task ID: {{ task["id"] }}
+            <p>task description: {{ task["description"] }}
+            <p>task category: {{ task["category"] }}
+            <p>task status: {{ task["status"] }}
+
+        </li>
+        {% endfor %}
+    </ul>
+
+    <form action="/submit" method="post">
+    <input type="number" name="id" placeholder="fill in the id here"><input type="text" name="description" placeholder="fill in the description"><input type="text" name="category" placeholder="fill in the category"><input type="text" name="status" placeholder="fill in the status">
+    <button type="submit">apply</button>
+  </form>
+
+<p></p>
+<form action="/tasks" method="get">
+    <button type="submit">go task editer</button>
+</form>
+
+
+
+<p></p>
+<form action="/tasks/categories" method="get">
+    <button type="submit">go category list</button>
+</form>
 
 </body>
 </html>
